PR: MRM-2 Submitted by: John Tolentino
More unit tests.

git-svn-id: https://svn.apache.org/repos/asf/maven/repository-manager/trunk@354393 13f79535-47bb-0310-9956-ffa450edef68